fixed overlap issue on contact form

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -89,6 +89,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 10;
   }
   .contact-container {
     border: solid 5px #76bbff;
